...
                        android:tint="@color/icon_gray"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_class_black_24dp" />

                    <TextView
                        android:id="@+id/tvSubject"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/dialog_choose_subject"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/text_dark"
...
                        android:tint="@color/icon_gray"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_class_type_black_24dp" />

                    <TextView
                        android:id="@+id/tvClassType"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/dialog_choose_class_type"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/text_dark"
...
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_time_black_24dp" />

                <FrameLayout
                    android:id="@+id/flTimeStartWrapper"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
...
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/ivTimeArrowIcon"
                    app:layout_constraintStart_toEndOf="@+id/ivTimeIcon"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tvTimeStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="@dimen/cardview_padding_vertical"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/text_dark"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_arrow_right_black_24dp" />

                <FrameLayout
                    android:id="@+id/flTimeEndWrapper"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:onClick="chooseEndTime"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivTimeArrowIcon"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tvTimeEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="@dimen/cardview_padding_vertical"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/text_dark"
...
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Every week" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:id="@+id/llRecurrenceDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:paddingStart="@dimen/cardview_padding_horizontal"
                    android:paddingEnd="@dimen/cardview_padding_horizontal"
                    android:paddingBottom="@dimen/cardview_padding_vertical">
...
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_date_black_24dp" />

                <FrameLayout
                    android:id="@+id/flDateStartWrapper"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
...
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/ivDateArrowIcon"
                    app:layout_constraintStart_toEndOf="@+id/ibSetDate"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tvDateStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="@dimen/cardview_padding_vertical"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/text_dark"
...
                    android:tint="@color/icon_gray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_location_black_24dp" />

                <EditText
                    android:id="@+id/etLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/prompt_location"
                    android:inputType="textCapSentences"
...
                    android:tint="@color/icon_gray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_teacher_black_24dp" />

                <TextView
                    android:id="@+id/tvTeacher"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/dialog_choose_teacher"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/text_dark"
...
