...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clMainContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clTimeContainer"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:paddingStart="@dimen/cardview_padding_horizontal"
                android:paddingTop="@dimen/cardview_padding_vertical"
                android:paddingEnd="@dimen/cardview_padding_horizontal"
                android:paddingBottom="@dimen/cardview_padding_vertical"
                app:layout_constraintBottom_toTopOf="@+id/barrier"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvClassStartTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    app:layout_constraintBottom_toTopOf="@+id/tvClassEndTime"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
...
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvClassStartTime"
                    tools:text="18:30" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clClassEssentials"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/cardview_padding_vertical"
                android:paddingBottom="@dimen/cardview_padding_vertical"
                app:layout_constraintBottom_toTopOf="@+id/barrier"
                app:layout_constraintEnd_toEndOf="parent"
...
                app:constraint_referenced_ids="clClassEssentials,clTimeContainer"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clExpandableContent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
                    app:layout_constraintTop_toTopOf="@+id/ivLocationIcon"
                    tools:text="11к 330" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llTeacherRow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
...
                    android:layout_height="wrap_content"
                    android:importantForAccessibility="no"
                    android:tint="@color/icon_gray"
                    app:srcCompat="@drawable/ic_teacher_black_24dp" />

                <TextView
                    android:id="@+id/tvClassTeacher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
...
