...
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_teachers_name" />

            <ViewSwitcher
                android:id="@+id/vsNameSwitcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inAnimation="@android:anim/slide_in_left"
                android:outAnimation="@android:anim/slide_out_right">

                <TextView
...
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    tools:text="Иванов Иван Иванович" />

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />
            </ViewSwitcher>

        </LinearLayout>
...
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_teachers_phone" />

            <ViewSwitcher
                android:id="@+id/vsPhoneSwitcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inAnimation="@android:anim/slide_in_left"
                android:outAnimation="@android:anim/slide_out_right">

                <TextView
...
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    tools:text="+7 (999) 240-32-00" />

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />

            </ViewSwitcher>

...
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_teachers_email" />

            <ViewSwitcher
                android:id="@+id/vsEmailSwitcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inAnimation="@android:anim/slide_in_left"
                android:outAnimation="@android:anim/slide_out_right">

                <TextView
...
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    tools:text="+7 (999) 240-32-00" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </ViewSwitcher>

...
