...
        <item>Day</item>
        <item>Week</item>
    </string-array>

    <string name="prompt_subject">Subject</string>
    <string name="button_add_subject">Add subject</string>
    <string name="dialog_choose_subject">Choose Subject</string>

    <string name="prompt_teacher">Teacher</string>
    <string name="button_add_teacher">Add</string>
    <string name="dialog_choose_teacher">Choose Teacher</string>

    <string name="prompt_class_type">Class Type</string>
    <string name="button_add_class_type">Add</string>
    <string name="dialog_choose_class_type">Choose Class Type</string>

    <string name="dialog_title_add_subject">Add subject</string>
    <string name="dialog_title_add_class_type">Add class type</string>

    <string name="prompt_name">Name</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_location">Location</string>
    <string name="prompt_time">Time</string>
    <string name="prompt_recurrence">Recurrence</string>
    <string name="prompt_date">Date</string>

    <string name="action_settings">Settings</string>
    <string name="recurrence_never">Do not repeat</string>
    <string name="recurrence_days">Days</string>
    <string name="every">Every</string>
    <string name="dialog_title_recurrence">Recurrence</string>
    <string name="hint_teachers_name">Name</string>
    <string name="hint_teachers_phone">Phone</string>
    <string name="hint_teachers_email">Email</string>
...
